syntax = "proto2";
package command_service;

service CommandService {
  rpc Insert(InsertMessage) returns (Empty);
}

message InsertMessage {
  required string object_id = 1;
  required string schema_id = 2;
  optional string order_group_id = 3;
  required int64 timestamp = 4;
  required bytes data = 5;
}

message Empty {}
